# Kaus

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
data/sample/: sample.json
evaluate/: baseline.py  dataset_utils.py  kaus.py  run_eval_baseline.sh  run_eval_kaus.sh
kaus/model/: config.py  draft_network.py  kv_cache.py  qwen2_5_vl.py  spec_model.py  tree_choices.py  utils.py  utils_c.py
train/: finetune_backbone.py  finetune_score_head.py  gen_draft_data.py  merge_lora.py  run_finetune_backbone.sh  run_finetune_score_head.sh  run_gen_draft_data.sh  run_train_draft.sh  run_train_score_head.sh  train_draft.py  train_score_head.py
