[project]
name = "kaus"
version = "0.1.0"
description = "Kaus: An image captioning metric based on speculative decoding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.6.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "av==15.0.0",
    "certifi==2025.4.26",
    "charset-normalizer==2.0.12",
    "datasets==3.5.0",
    "dill==0.3.8",
    "filelock==3.13.1",
    "frozenlist==1.6.0",
    "fsspec==2024.6.1",
    "huggingface-hub>=0.30.2",
    "idna==3.10",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "multiprocess==0.70.16",
    "networkx==3.3",
    "numpy==2.1.2",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "propcache==0.3.1",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "qwen-vl-utils==0.0.11",
    "regex>=2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn>=1.7.2",
    "sentencepiece==0.2.0",
    "setuptools==70.2.0",
    "shortuuid==1.0.13",
    "six==1.17.0",
    "sympy==1.13.3",
    "tokenizers>=0.21.1",
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "torchaudio==2.8.0+cu128",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "triton==3.4.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==1.26.20",
    "wandb>=0.25.0",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "peft>=0.18.1",
    "matplotlib>=3.10.8",
    "google-generativeai>=0.8.6",
    "python-docx>=1.2.0",
    "tabulate>=0.10.0",
    "ipywidgets>=8.1.8",
]

[tool.uv.workspace]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
